# decompile-eval-framework

./: .gitignore  README.md  pyproject.toml
configs/: agent4decompile-binary-consensus-smoke.yaml.example  agent4decompile-binary-single-smoke.yaml.example  agent4decompile-improved-pseudocode-l3-smoke.yaml.example  agent4decompile-pseudocode-l2-smoke.yaml.example  agent4decompile-pseudocode-l3-decompile-eval-smoke.yaml.example  agent4decompile-pseudocode-l3-smoke.yaml.example  binoracle-contract-audit-full1100.yaml.example  binoracle-contract-audit-mvp58.yaml.example  binoracle-contract-audit-smoke.yaml.example  binoracle-contract-audit-study100.yaml.example  binoracle-contract-probe-smoke.yaml.example  binoracle-differential-smoke.yaml.example  binoracle-dynamic-audit-smoke.yaml.example  binoracle-dynamic-repair-llm-smoke.yaml.example  binoracle-dynamic-repair-mvp58.yaml.example  binoracle-dynamic-repair-smoke.yaml.example  binoracle-dynamic-repair-study100.yaml.example  binoracle-exebench-smoke.yaml.example  binoracle-known-contracts.json.example  closed-llm-kimi-smoke.yaml  closed-llm-kimi-smoke.yaml.example  closed-llm-pseudocode-example.yaml  closed-llm-pseudocode-example.yaml.example  degpt-pseudocode-smoke.yaml.example  example.yaml  fidelitygpt-exebench-ghidra-full-smoke.yaml.example  ghidra-exebench-smoke.yaml  ghidra-pseudocode-decompile-eval-smoke.yaml.example  ghidra-pseudocode-exebench-smoke.yaml.example  llm4decompile-decompile-eval-smoke.yaml  llm4decompile-pseudocode-smoke.yaml.example  llm4decompile-smoke.yaml  llm4decompile-smoke.yaml.example  llm4decompile-vllm-smoke.yaml.example  ossfuzz-rsr-smoke.yaml.example  refdec-decompile-eval-smoke.yaml.example  sccdec-decompile-eval-smoke.yaml.example  sk2decompile-decompile-eval-smoke.yaml.example
docs/: AGENT4DECOMPILE.md  AGENT4DECOMPILE_IMPROVED.md  BINORACLE.md  BINORACLE_GUIDE.md  CLOSED_LLM.md  CLOSED_MODEL_MATRIX.md  DEGPT.md  EXEBENCH_TOOLS.md  EXTENDING.md  FIDELITYGPT.md  GHIDRA.md  INTEGRATION_ROADMAP_DEGPT_REFDEC_OSSFUZZ.md  LLM4DECOMPILE_VLLM.md  OSSFUZZ.md  REFDEC.md  RESULT_REUSE.md  SCCDEC.md  SELECTION_MANIFEST.md  SK2DECOMPILE.md  THINKING_MODE.md
examples/: toy_command_decompiler.py
plugins/binoracle/runtime/: CMakeLists.txt  abi_trampoline.S  binoracle_runtime.h  deterministic_stubs.c  guard_memory.c  observation.c  runner_main.c
(+123 files in other folders)
